--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>Fight Fake Nes</title>
+<title>Fight Fake News</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -63,56 +63,22 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="about">
     <h2 class="w3-text-light-grey">FIGHT FAKE NEWS</h2>
     <hr style="width:200px" class="w3-opacity">
-    <p></p>
+    <p>Write introduction here.</p>
     
     <!-- Grid for pricing tables -->
     <div class="w3-padding-64 w3-content">
       <h2 class="w3-text-light-grey">Check a news.</h2>
       <hr style="width:200px" class="w3-opacity">
-      <script>
-        function myFunction(){
-          var x = document.getElementById("myFile");
-          var txt = "";
-          if ('files' in x) {
-            if (x.files.length == 0) {
-              txt = "Select one or more files.";
-            } else {
-              for (var i = 0; i < x.files.length; i++) {
-                txt += "<br><strong>" + (i+1) + ". file</strong><br>";
-                var file = x.files[i];
-                if ('name' in file) {
-                  txt += "name: " + file.name + "<br>";
-                }
-                if ('size' in file) {
-                  txt += "size: " + file.size + " bytes <br>";
-                }
-              }
-            }
-          } 
-          else {
-            if (x.value == "") {
-              txt += "Select one or more files.";
-            } else {
-              txt += "The files property is not supported by your browser!";
-              txt  += "<br>The path of the selected file: " + x.value; // If the browser does not support the files property, it will return the path of the selected file instead. 
-            }
-          }
-          document.getElementById("demo").innerHTML = txt;
-        }
-        </script>
+    <p>Click on "Fill out form". We will get back to you after checking the authenticity of news. Bare with us.</p>
 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf-2B_JmqCtUlgIDqLh9jM1VHTt87t6Wnedxi6Ugxh3-Z0bsg/viewform?embedded=true" width="640" height="542" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-<form action="upload.php" method="post" enctype="multipart/form-data">
-    Select image to upload:
-    <input type="file" name="fileToUpload" id="fileToUpload">
-    <input type="submit" value="Upload Image" name="submit">
-</form>
+
   
   </div>
 
   <div class="w3-padding-64 w3-content" id="faqs">
     <h2 class="w3-text-light-grey">Previous Posts</h2>
     <hr style="width:200px" class="w3-opacity">
-    
+    <p>Here comes the previous posts of news verified.</p>
   </div>
   
   
