--- a/index.html
+++ b/index.html
@@ -63,7 +63,20 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="about">
     <h2 class="w3-text-light-grey">FIGHT FAKE NEWS</h2>
     <hr style="width:200px" class="w3-opacity">
-    <p>Write introduction here.</p>
+    <p>Fake News is an inaccurate, sometimes a fabricated report that is created to gain 
+      attention, mislead or deceive people. Social media especially WhatsApp in particular 
+      has proved to be an easy venue for distributing fake news. Bogus stories can be 
+      shared or posted from a mobile smartphone and quickly distributed to a large audience 
+      through sharing.
+      <br>
+      As one can see that the world is presently facing an unprecedented challenge and is 
+      fighting against SARS-CoV 2 or in simple terms CORONA VIRUS, the spread of fake news 
+      regarding this virus is resulting in unnecessary confusion and chaos among the people. 
+      These messages may contain useless, incorrect or even harmful information and advice, 
+      which can obstruct the public health response and add to social disorder due to panic 
+      strikes. In order to avoid all these kinds of misinformation one should only try to 
+      gather information from reliable sources rather than WhatsApp forwards or posts that 
+      are being circulated.</p>
     
     <!-- Grid for pricing tables -->
     <div class="w3-padding-64 w3-content">
